--- a/src/components/forms/InputText.module.css
+++ b/src/components/forms/InputText.module.css
@@ -16,7 +16,7 @@
   margin-bottom: 10px;
   outline: none;
   transition: all ease 0.1s;
-  padding-left: 12%;
+  padding-left: 5px;
 }
 
 .invalidInput {
