--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -7,3 +7,9 @@
     align-items: center;
     background-color: var(--white);
 }
+
+.homeDetailPage {
+    background-color: white;
+    padding: 10px;
+    height: 100vh;
+}
