--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -10,6 +10,7 @@
 
 .homeDetailPage {
     background-color: white;
-    padding: 10px;
-    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    padding: 10px 90px;
 }
