--- a/src/app/store/store.module.css
+++ b/src/app/store/store.module.css
@@ -15,30 +15,68 @@
   margin-top: 20px;
   flex-wrap: wrap;
   gap: 15px;
+  max-width: 832px; 
+}
+
+.searchInputContainer {
+  position: relative; 
+  width: 100%;
+  display: inline-block;
+}
+
+.searchIcon {
+  position: absolute; 
+  top: 50%; 
+  left: 10px;
+  transform: translateY(-50%);
+  color: var(--light-grey); 
+  font-size: 1.2rem; 
+}
+
+.appSubTitle {
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .searchInput {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  padding-left: 35px; 
+  padding-right: 15px;
+  height: 40px;
+  color: var(--darker);
   width: 100%;
-  max-width: 300px;
+  border: 1px solid var(--light-grey);
+  border-radius: 4px;
+}
+
+.searchInput:focus {
+  outline: 1px solid var(--primary-blue);
+}
+
+.filterBar {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 6px;
 }
 
 .filterBar button {
   padding: 8px 15px;
-  margin-left: 10px;
-  border: 1px solid #0070f3;
+  margin-left: 0px;
+  border: 1px solid var(--greyer-blue);
   background-color: transparent;
-  color: #0070f3;
+  color: var(--primary-blue);
   border-radius: 6px;
   cursor: pointer;
   transition: background-color 0.2s, color 0.2s;
 }
 
 .filterBar .activeFilter {
-  background-color: #0070f3;
+  background-color: var(--primary-blue);
   color: white;
+}
+
+.dockerFilterWrapper {
+  position: relative;
 }
 
 .divider {
@@ -51,27 +89,45 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin-left: 80px;
+  width: 70vw;
 }
 
 .appItem {
   border: 1px solid #ddd;
   border-radius: 12px;
+  height: 400px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+}
+
+.appContent {
+  padding: 10px;
+  height: 80%;
+  color: var(--darker);
 }
 
 .appName {
   font-size: 1.5rem;
   margin-bottom: 10px;
   color: #333;
+  font-weight: 700;
 }
 
-.stats p {
-  margin: 5px 0;
-  font-size: 0.9rem;
+.appDescription {
+  color: var(--light-grey);
+  margin: 5px 0px;
+}
+
+.serviceList {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+  padding: 4px 0px;
+  flex-wrap: wrap;
 }
 
 .footer {
-    height: 70px;
+    height: 20%;
     width: 100%;
     border-radius: 0 0 12px 12px;
     background-color: var(--primary-blue);
@@ -96,12 +152,16 @@
     border: 1px solid var(--white);
     border-radius: 4px;
     font-size: 19px;
-    padding: 4px;
+    padding: 2px;
     margin-left: 10px;
     margin-right: 8px;
+    display: flex;
     background-color: var(--white);
 }
 
+.favButtonCounter {
+  color: var(--darker);
+}
 
 .downloadButton {
   display: flex;
