--- a/src/components/ui/TemplateSelector.module.css
+++ b/src/components/ui/TemplateSelector.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5); /* opacidad */
+  background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
 }
 
@@ -16,6 +16,7 @@
     left: 30%;
     top: 10%;
     border-radius: 12px;
+    overflow-y: scroll;
     padding: 20px;
 }
 
@@ -24,4 +25,12 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+}
+
+
+@media (min-width: 900px) and (max-width: 1300px) {
+  .popup {
+    left: 20%;
+    width: 60vw;
+  }
 }
