--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -1,11 +1,20 @@
 .mainContent {
     width: 100vw;
-    height: 100vh;
+    position: relative;
+    height: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: top;
     align-items: center;
     background-color: var(--white);
+}
+
+.noAppsContainer {
+    background-color: white;
+    width: 80vw;
+    text-align: center;
+    padding: 10px 90px;
 }
 
 .homeDetailPage {
