--- a/src/components/ui/TemplateSelector.module.css
+++ b/src/components/ui/TemplateSelector.module.css
@@ -21,12 +21,72 @@
 }
 
 .content {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    overflow: hidden;
+    height: 100%;
+  }
+
+.buttonGroup {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+    border-radius: 8px;
+    gap: 0;
+    font-size: 20px;
 }
 
+.appsShowed {
+  position: relative;
+  z-index: 1000;
+  left: 0;
+  transition: all 0.3s ease;
+  z-index: 1000;
+}
+
+.appsHidden {
+  position: absolute;
+  left: -3999px;
+  top: 90px;
+  z-index: -9999;
+  transition: all 0.3s ease;
+}
+
+.templatesShowed {
+  position: relative;
+  z-index: 1000;
+  right: 0;
+  transition: all 0.3s ease;
+}
+
+.templatesHidden {
+  position: absolute;
+  right: -3999px;
+  top: 90px;
+  z-index: -9999;
+  transition: all 0.3s ease;
+}
+
+.buttonInactive {
+    padding: 10px 20px;
+    border-radius: 4px;
+    background-color: var(--light-grey); 
+    color: var(--darkest);
+    border: none;
+    cursor: pointer;
+}
+
+.buttonActive {
+    padding: 10px 20px;
+    border-radius: 4px;
+    background-color: var(--primary-blue);
+    color: var(--white); 
+    border: none;
+    cursor: pointer;
+}
 
 @media (min-width: 900px) and (max-width: 1300px) {
   .popup {
